@@ -1,2 +1,7 @@
+.DS_Store
 nbproject
 .idea
+pkg
+doc
+coverage
+Manifest
