@@ -1,0 +1,32 @@
+#
+# = Helperful
+#
+# A collection of useful Rails helpers.
+#
+#
+# Category::    Rails
+# Package::     Helperful
+# Author::      Simone Carletti <weppos@weppos.net>
+# Copyright::   2007-2008 The Authors
+# License::     MIT License
+#
+#--
+#
+#++
+
+
+module Helperful
+
+  module Version
+    MAJOR = 0
+    MINOR = 2
+    TINY  = 0
+
+    STRING = [MAJOR, MINOR, TINY].join('.')
+  end
+
+  VERSION         = Version::STRING
+  STATUS          = 'alpha'
+  BUILD           = ''.match(/(\d+)/).to_a.first
+
+end
